--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,37 @@
 {
     "routes": [
         {
+            "src": "/assets/(.*)",
+            "dest": "/assets/$1"
+        },
+        {
+            "src": "/(.*)\\.js",
+            "dest": "/$1.js"
+        },
+        {
+            "src": "/(.*)\\.css",
+            "dest": "/$1.css"
+        },
+        {
+            "src": "/(.*)\\.svg",
+            "dest": "/$1.svg"
+        },
+        {
+            "src": "/(.*)\\.png",
+            "dest": "/$1.png"
+        },
+        {
             "src": "/(.*)",
             "dest": "/index.html"
         }
-    ]
+    ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ],
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "framework": "vite"
 }
